# minimal-cmake-webasm-sdl-project

./: CMakeLists.txt
build.emscripten/: client.wasm  index.html
src/: core.cpp
